--- a/api/package.json
+++ b/api/package.json
@@ -12,5 +12,9 @@
     "multer": "^1.4.5-lts.1",
     "qr-image": "^3.2.0",
     "qrcode": "^1.5.3"
+  },
+  "scripts": {
+    "dev": "node index.js"
   }
+
 }
